--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UBGLOL123</title>
+    <title>Canvas</title>
     <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.0/css/all.css">
-</head>
+    <link rel="icon" href="http://https://www.instructure.com/sites/default/files/image/2021-12/Canvas_logo_single_mark.png">
+    </head>
 <body>
     <nav>
         <img src="images/logo (1).png" alt="logo">
