--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Canvas</title>
     <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.0/css/all.css">
-    <link rel="icon" href="http://https://www.instructure.com/sites/default/files/image/2021-12/Canvas_logo_single_mark.png">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     </head>
 <body>
     <nav>
