--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
                 <i class="fa-solid fa-play"></i>
             </div>
           </a>
+          <a href="games/highway-rider/">
+            <img src="images/highwaysplash.png">
+            <div class="play-button">
+                <i class="fa-solid fa-play"></i>
+            </div>
+          </a>
         </div>
         </div>
     </div>
@@ -90,6 +96,7 @@
         <a href="games/slope/"><img src="images/slope.jpg" alt="slope"></a>
         <a href="games/motox3m2/"><img src="images/motox3m2.jpg" alt="moto x3m2"></a>
         <a href="games/proxy/"><img src="images/proxylogo.png" alt="proxy"></a>
+        <a href="games/highway-rider/"><img src="images/highwaysplash.png" alt="highway rider extreme"></a>
     </div>
     </div>
 </body>
