--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
                 <i class="fa-solid fa-play"></i>
             </div>
           </a>
+          <a href="games/subwaysurferszurich/">
+            <img src="images/subwaysurferssplash.png">
+            <div class="play-button">
+                <i class="fa-solid fa-play"></i>
+            </div>
+          </a>
         </div>
         </div>
     </div>
@@ -97,6 +103,7 @@
         <a href="games/motox3m2/"><img src="images/motox3m2.jpg" alt="moto x3m2"></a>
         <a href="games/proxy/"><img src="images/proxylogo.png" alt="proxy"></a>
         <a href="games/highway-rider/"><img src="images/highwaysplash.png" alt="highway rider extreme"></a>
+        <a href="games/subwaysurferszurich/"><img src="images/subwaysurferssplash.png" alt="subway surfers zurich"></a>
     </div>
     </div>
 </body>
